# sonata-system

sw/cheri/common/: flash-utils.hh
sw/cheri/tests/: pinmux_tests.hh
sw/legacy/common/: CMakeLists.txt  adc.c  adc.h  sonata_system_regs.h
sw/legacy/demo/: CMakeLists.txt
sw/legacy/demo/adc_test/: CMakeLists.txt  main.c
sw/legacy/demo/automotive/: CMakeLists.txt  automotive.c  ksz8851.c  ksz8851.h  lcd.c  lcd.h  main.c  send.c
sw/legacy/demo/automotive/lib/: analogue_pedal.c  analogue_pedal.h  automotive_common.c  automotive_common.h  automotive_menu.c  automotive_menu.h  digital_pedal.c  digital_pedal.h  joystick_pedal.c  joystick_pedal.h  no_pedal.c  no_pedal.h  simple_bug.c  simple_bug.h
sw/legacy/demo/automotive/lib2/: automotive_common.c  automotive_common.h  automotive_menu.c  automotive_menu.h  cursor.h  simple_bug.c  simple_bug.h
sw/legacy/demo/ethernet/: main.c
